# lelu

./: .gitignore  Cargo.toml  README.md  Rocket.toml  Shuttle.toml  justfile
src/: components.rs  context.rs  main.rs  page.rs  session.rs
src/controllers/: auth.rs  hello.rs  hero.rs  mod.rs  pona.rs  profile.rs  toki_lili.rs
src/domain/: lili.rs  mod.rs  pona.rs  profile.rs  session.rs  user.rs
src/infra/: mod.rs
src/infra/maud/: mod.rs
src/infra/persist/: lili.rs  pona.rs  profile.rs  session.rs  user.rs
src/infra/rocket_infra/: mod.rs
src/services/: auth.rs  lili.rs  mod.rs  profile.rs  user.rs
src/ui/: mod.rs  page.rs
src/ui/components/: feed.rs  lili.rs  login_form.rs  mod.rs  nav.rs  profile.rs  sign_up_form.rs  toki_lili.rs  trending.rs
src/ui/pages/: hero.rs  mod.rs  profile.rs
static/: hash.js  main.css  notify.js  scroll.js
