[package]
name = "lelu"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5"
maud = { git = "https://github.com/lambda-fairy/maud", branch = "main" }

shuttle-rocket = "0.34.0"
shuttle-runtime = "0.34.0"
shuttle-secrets = "0.34.1"
shuttle-persist = "0.34.1"

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.31"
argon2 = "0.5.2"
nanoid = "0.4.0"
itertools = "0.12.0"
